Tell Maven 2.x to expect Java 1.5 syntax and produce .classes compatible with 1.5

--- a/pom.xml
+++ b/pom.xml
@@ -24,4 +24,15 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
