Add Github gist link

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<url>https://github.com/stripe/stripe-java</url>
 	<organization>
 		<name>Stripe</name>
-		<url>http://stripe.com</url>
+		<url>https://stripe.com</url>
 	</organization>
 	<scm>
 		<url>https://github.com/stripe/stripe-java.git</url>
