--- a/pom.xml
+++ b/pom.xml
@@ -1,67 +1,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.stripe</groupId>
-	<artifactId>stripe-java</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<name>Stripe Java Bindings</name>
-	<url>https://github.com/stripe/stripe-java</url>
-	<organization>
-		<name>Stripe</name>
-		<url>https://stripe.com</url>
-	</organization>
-	<scm>
-		<url>https://github.com/stripe/stripe-java.git</url>
-	</scm>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>1.7.1</version>
-			<scope>compile</scope>
-		</dependency>
-	</dependencies>
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-				<includes>
-					<include>**/*.properties</include>
-					<include>**/*.xml</include>
-				</includes>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>pl.project13.maven</groupId>
-				<artifactId>git-commit-id-plugin</artifactId>
-				<version>1.5</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>revision</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>sonatype-releases</id>
-			<name>Sonatype Releases</name>
-			<url>https://oss.sonatype.org/content/repositories/releases/</url>
-		</pluginRepository>
-	</pluginRepositories>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.stripe</groupId>
+  <artifactId>stripe-java</artifactId>
+  <packaging>jar</packaging>
+  <version>1.0.0</version>
+  <name>stripe-java</name>
+  <url>https://github.com/stripe/stripe-java</url>
+  <dependencies>
+    <dependency>
+    	<groupId>com.google.code.gson</groupId>
+    	<artifactId>gson</artifactId>
+    	<version>1.7.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.httpcomponents</groupId>
+    	<artifactId>httpclient</artifactId>
+    	<version>4.1.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.10</version>
+    	<scope>test</scope>
+    </dependency>
+  </dependencies>
+  <description>Stripe Java Bindings</description>
+  <organization>
+  	<name>Stripe</name>
+  	<url>https://stripe.com</url>
+  </organization>
 </project>
