--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.stripe</groupId>
     <artifactId>stripe-java</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <name>stripe-java</name>
     <url>https://github.com/stripe/stripe-java</url>
     <dependencies>
@@ -36,6 +36,14 @@
         <url>git@github.com:stripe/stripe-java.git</url>
     </scm>
     <build>
+        <resources>
+            <resource>
+                <directory>.</directory>
+                <includes>
+                    <include>VERSION</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
