--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,23 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+              <groupId>org.sonatype.plugins</groupId>
+              <artifactId>nexus-staging-maven-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>default-deploy</id>
+                  <phase>deploy</phase>
+                  <goals>
+                    <goal>deploy</goal>
+                  </goals>
+                </execution>
+              </executions>
+              <configuration>
+                <serverId>sonatype-nexus-staging</serverId>
+                <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+              </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
