Use the new build env on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: java
-install: mvn install -Dgpg.skip=true
+
 jdk:
   - openjdk6
   - openjdk7
   - oraclejdk7
   - oraclejdk8
+
+sudo: false
+
+install: mvn install -Dgpg.skip=true
