--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ jdk:
   - oraclejdk7
   - oraclejdk8
 
-sudo: false
-
 install: mvn install -Dgpg.skip=true -DskipTests
+
+notifications:
+  email:
+    on_success: never
+
+sudo: false
