--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ POM_DESCRIPTION=Stripe Java Bindings
 POM_NAME=stripe-java
 POM_ARTIFACT_ID=stripe-java
 POM_PACKAGING=jar
+POM_ORGANIZATION_URL=https://stripe.com
