--- a/deploy.gradle
+++ b/deploy.gradle
@@ -41,6 +41,7 @@ afterEvaluate { project ->
                 pom.groupId = GROUP
                 pom.artifactId = POM_ARTIFACT_ID
                 pom.version = VERSION_NAME
+                pom.packaging = POM_PACKAGING
 
                 repository(url: getReleaseRepositoryUrl()) {
                     authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
@@ -52,7 +53,6 @@ afterEvaluate { project ->
 
                 pom.project {
                     name POM_NAME
-                    packaging POM_PACKAGING
                     description POM_DESCRIPTION
                     url POM_URL
 
@@ -74,7 +74,13 @@ afterEvaluate { project ->
                         developer {
                             id POM_DEVELOPER_ID
                             name POM_DEVELOPER_NAME
+                            email POM_DEVELOPER_EMAIL
                         }
+                    }
+
+                    organization {
+                        name POM_DEVELOPER_NAME
+                        url POM_ORGANIZATION_URL
                     }
                 }
             }
