fixing travis, hopefully

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,24 @@
 language: java
 
+addons:
+  hosts:
+    - short-hostname
+  hostname: short-hostname
+
 matrix:
   include:
     - jdk: openjdk7
+      dist: precise
     - jdk: oraclejdk7
       dist: precise
     - jdk: oraclejdk8
     - jdk: oraclejdk9
-
-script:
-  - ./gradlew clean test
 
 notifications:
   email:
     on_success: never
 
 sudo: false
+
+script:
+  - ./gradlew clean test
