--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,21 @@ tasks.withType(JavaCompile) {
 configurations.all {
 }
 
-repositories {
-     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-     maven { url "http://repo.maven.apache.org/maven2" }
+buildscript {
+    repositories {
+        jcenter()
+        //Add only for SNAPSHOT versions
+        //maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
+    }
+    dependencies {
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.11.0"
+    }
 }
+
+repositories {
+     jcenter()
+}
+
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
     testCompile group: 'com.google.guava', name: 'guava', version:'18.0'
