--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 GROUP=com.stripe
-VERSION_NAME=5.21.1-beta
+VERSION_NAME=5.21.1-beta-3
 
 POM_URL=https://github.com/stripe/stripe-java
 POM_SCM_URL=git@github.com:stripe/stripe-java.git
 POM_SCM_CONNECTION=scm:git:git@github.com:stripe/stripe-java.git
 POM_SCM_DEV_CONNECTION=scm:git:git@github.com:stripe/stripe-java.git
 POM_LICENCE_NAME=The MIT License
-POM_LICENCE_URL=https://raw.githubusercontent.com/stripe/stripe-java/master/LICENSE
+POM_LICENCE_URL=https://opensource.org/licenses/MIT
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=stripe
 POM_DEVELOPER_NAME=Stripe
