--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ repositories {
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
     testCompile group: 'com.google.guava', name: 'guava', version:'18.0'
-    testCompile group: 'junit', name: 'junit', version:'4.10'
-    testCompile group: 'org.mockito', name: 'mockito-all', version:'1.10.19'
+    testCompile group: 'junit', name: 'junit', version:'4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core', version:'2.12.0'
 }
 
 apply from: 'deploy.gradle'
