Use Gradle caching on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,12 @@ sudo: false
 
 script:
   - ./gradlew clean test
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
