--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
-    compileOnly group: 'javax.annotation', name: 'jsr250-api', version: '1.0'
+    compileOnly "org.projectlombok:lombok:1.16.16"
     compile group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
     testCompile group: 'com.google.guava', name: 'guava', version:'18.0'
     testCompile group: 'junit', name: 'junit', version:'4.12'
