--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,11 @@ buildscript {
 }
 
 repositories {
-     jcenter()
+    jcenter()
 }
 
 dependencies {
-    compileOnly "org.projectlombok:lombok:1.16.16"
+    compileOnly group: 'org.projectlombok', name: 'lombok', version:'1.16.18' // Will need to bump to 1.16.19 when released to support JDK9
     compile group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
     testCompile group: 'com.google.guava', name: 'guava', version:'18.0'
     testCompile group: 'junit', name: 'junit', version:'4.12'
