Improve gradle output in Travis

--- a/build.gradle
+++ b/build.gradle
@@ -33,3 +33,10 @@ dependencies {
 }
 
 apply from: 'deploy.gradle'
+
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
+}
