--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
 plugins {
     id 'java'
     id 'maven'
+    id 'net.saliman.cobertura' version '2.5.2'
+    id 'com.github.kt3k.coveralls' version '2.8.2'
 }
 
 sourceCompatibility = 1.7
@@ -33,6 +35,7 @@ dependencies {
     testCompile group: 'com.google.guava', name: 'guava', version:'18.0'
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version:'2.12.0'
+    testRuntime group: 'org.slf4j', name: 'slf4j-api', version: '1.7.10'
 }
 
 apply from: 'deploy.gradle'
@@ -42,4 +45,9 @@ test {
         events "passed", "skipped", "failed"
         exceptionFormat "full"
     }
+}
+
+cobertura {
+    coverageFormats = ['html', 'xml'] // coveralls plugin depends on xml format report
+    coverageIgnoreTrivial = true // ignore getters/setters in coverage report
 }
