--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,3 @@
-apply plugin: 'java'
-apply plugin: 'maven'
-
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
-tasks.withType(JavaCompile) {
-	options.encoding = 'UTF-8'
-}
-
-configurations.all {
-}
-
 buildscript {
     repositories {
         jcenter()
@@ -19,6 +7,21 @@ buildscript {
     dependencies {
         classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.11.0"
     }
+}
+
+plugins {
+    id 'java'
+    id 'maven'
+}
+
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+}
+
+configurations.all {
 }
 
 repositories {
