--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@ POM_NAME=stripe-java
 POM_ARTIFACT_ID=stripe-java
 POM_PACKAGING=jar
 POM_ORGANIZATION_URL=https://stripe.com
+
+VENDOR_NAME=Stripe, Inc. (https://stripe.com)
