--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "vscjava.vscode-java-pack",
+        "shengchen.vscode-checkstyle",
         "naco-siren.gradle-language"
     ]
 }
