--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+  "checkstyle.autocheck": false,
+  "checkstyle.version": "8.8",
+  "checkstyle.configurationFile": "./config/checkstyle/checkstyle.xml",
   "editor.renderWhitespace": "all",
   "[java]": {
     "editor.detectIndentation": false,
