--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 plugins {
     id 'java'
     id 'maven'
+    id 'checkstyle'
     id 'net.saliman.cobertura' version '2.5.2'
     id 'com.github.kt3k.coveralls' version '2.8.2'
     id 'osgi'
@@ -65,6 +66,11 @@ test {
         events "passed", "skipped", "failed"
         exceptionFormat "full"
     }
+}
+
+checkstyle {
+    sourceSets = [] // for now, only run checkstyle tasks when called explicitly
+    toolVersion = '8.8'
 }
 
 cobertura {
