--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "checkstyle.autocheck": false,
+  "checkstyle.autocheck": true,
   "checkstyle.version": "8.8",
   "checkstyle.configurationFile": "./config/checkstyle/checkstyle.xml",
   "editor.renderWhitespace": "all",
