--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "vscjava.vscode-java-pack",
         "shengchen.vscode-checkstyle",
+        "GabrielBB.vscode-lombok",
         "naco-siren.gradle-language"
     ]
 }
