--- a/deploy.gradle
+++ b/deploy.gradle
@@ -9,6 +9,8 @@
 apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'io.codearte.nexus-staging'
+apply plugin: 'checkstyle'
+
 
 nexusStaging {
     packageGroup = GROUP
