--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ repositories {
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version:'2.8.2'
     compile group: 'org.apache.commons', name: 'commons-configuration2', version: '2.0'
+    compile group: 'org.bouncycastle', name: 'bcprov-ext-jdk15on', version: '1.58'
     testCompile group: 'com.google.guava', name: 'guava', version:'18.0'
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version:'2.12.0'
