--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,28 @@ jar {
 }
 
 lombok {
-    version = "1.16.22"
+    version = "1.18.0"
     sha256 = ""
+}
+
+import io.franzbecker.gradle.lombok.task.DelombokTask
+
+task delombok(type: DelombokTask, dependsOn: compileJava) {
+    ext.outputDir = file("$buildDir/delombok")
+    outputs.dir(outputDir)
+    sourceSets.main.java.srcDirs.each {
+        inputs.dir(it)
+        args(it, "-d", outputDir)
+    }
+}
+
+task delombokHelp(type: DelombokTask) {
+    args "--help"
+}
+
+javadoc {
+    dependsOn delombok
+    source = delombok.outputDir
 }
 
 apply from: 'deploy.gradle'
