--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 plugins {
     id 'java'
     id 'maven'
-    id 'io.franzbecker.gradle-lombok' version '1.11'
+    id 'io.franzbecker.gradle-lombok' version '1.14'
     id 'checkstyle'
     id 'net.saliman.cobertura' version '2.5.4'
     id 'com.github.kt3k.coveralls' version '2.8.2'
@@ -42,11 +42,11 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.google.code.gson', name: 'gson', version:'2.8.2'
-    testCompile group: 'com.google.guava', name: 'guava', version:'18.0'
+    compile group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
+    testCompile group: 'com.google.guava', name: 'guava', version:'26.0-android' // Use Android flavor for JDK7 compatiblity
     testCompile group: 'junit', name: 'junit', version:'4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version:'2.12.0'
-    testRuntime group: 'org.slf4j', name: 'slf4j-api', version: '1.7.10'
+    testCompile group: 'org.mockito', name: 'mockito-core', version:'2.22.0'
+    testRuntime group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 }
 
 jar {
@@ -76,15 +76,20 @@ task delombok(type: DelombokTask, dependsOn: compileJava) {
         inputs.dir(it)
         args(it, "-d", outputDir)
     }
+    doFirst {
+        outputDir.deleteDir()
+    }
 }
 
 task delombokHelp(type: DelombokTask) {
     args "--help"
 }
 
+
 javadoc {
     dependsOn delombok
     source = delombok.outputDir
+    failOnError = true
 }
 
 apply from: 'deploy.gradle'
@@ -97,7 +102,7 @@ test {
 }
 
 checkstyle {
-    toolVersion = '8.8'
+    toolVersion = '8.12'
 }
 
 cobertura {
