--- a/deploy.gradle
+++ b/deploy.gradle
@@ -94,7 +94,12 @@ afterEvaluate { project ->
     signing {
         required { isReleaseBuild() &&
         (gradle.taskGraph.hasTask("uploadArchives") || gradle.taskGraph.hasTask("publish"))}
+        useGpgCmd()
         sign configurations.archives
+    }
+
+    tasks.withType(Sign) {
+        onlyIf { isReleaseBuild() && project.hasProperty('signing.gnupg.keyName') }
     }
 
     task makeJavadocs(type: Javadoc, dependsOn: delombok) {
