--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ plugins {
     id 'osgi'
 }
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 group = GROUP
 version = VERSION_NAME
@@ -43,7 +43,7 @@ repositories {
 
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
-    testCompile group: 'com.google.guava', name: 'guava', version:'26.0-android' // Use Android flavor for JDK7 compatiblity
+    testCompile group: 'com.google.guava', name: 'guava', version:'27.1-jre'
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version:'2.22.0'
     testRuntime group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
