--- a/build.gradle
+++ b/build.gradle
@@ -5,18 +5,18 @@ buildscript {
         //maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
     dependencies {
-        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.11.0"
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.20.0"
     }
 }
 
 plugins {
     id 'java'
     id 'maven'
-    id 'io.franzbecker.gradle-lombok' version '1.14'
+    id 'io.franzbecker.gradle-lombok' version '2.1'
     id 'checkstyle'
-    id 'net.saliman.cobertura' version '2.5.4'
+    id 'net.saliman.cobertura' version '2.6.0'
     id 'com.github.kt3k.coveralls' version '2.8.2'
-    id 'osgi'
+    id 'biz.aQute.bnd.builder' version '4.2.0'
 }
 
 sourceCompatibility = 1.8
@@ -45,26 +45,25 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
     testCompile group: 'com.google.guava', name: 'guava', version:'27.1-jre'
     testCompile group: 'junit', name: 'junit', version:'4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version:'2.22.0'
-    testRuntime group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:3.12.1'
+    testCompile group: 'org.mockito', name: 'mockito-core', version:'2.25.1'
+    testRuntime group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.14.0'
 }
 
 jar {
     manifest {
         attributes("Implementation-Title": POM_NAME,
                    "Implementation-Version": VERSION_NAME,
-                   "Implementation-Vendor": VENDOR_NAME)
+                   "Implementation-Vendor": VENDOR_NAME,
+                   "Bundle-SymbolicName": POM_ARTIFACT_ID,
+                   "Export-Package": 'com.stripe.*')
 
         version = VERSION_NAME
-        symbolicName = POM_ARTIFACT_ID
-
-        instruction 'Export-Package', '*'
     }
 }
 
 lombok {
-    version = "1.18.2"
+    version = "1.18.6"
     sha256 = ""
 }
 
@@ -115,7 +114,7 @@ test {
 }
 
 checkstyle {
-    toolVersion = '8.16'
+    toolVersion = '8.18'
 }
 
 cobertura {
