Start testing Java 12

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
     - jdk: openjdk9
     - jdk: openjdk10
     - jdk: openjdk11
+    - jdk: openjdk12
     - jdk: openjdk-ea
   allow_failures:
     - jdk: openjdk-ea
