--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
     id 'java'
     id 'maven'
     id 'io.franzbecker.gradle-lombok' version '2.1'
+    id "net.ltgt.errorprone" version "0.7.1"
     id 'checkstyle'
     id 'net.saliman.cobertura' version '2.6.0'
     id 'com.github.kt3k.coveralls' version '2.8.2'
@@ -43,6 +44,8 @@ repositories {
 
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
+    errorprone group: 'com.google.errorprone', name: 'error_prone_core', version: '2.3.3'
+    errorproneJavac group: 'com.google.errorprone', name: 'javac', version:'9+181-r4173-1'
     testCompile group: 'com.google.guava', name: 'guava', version:'27.1-jre'
     testCompile group: 'org.mockito', name: 'mockito-core', version:'2.25.1'
     testRuntime group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
