--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ plugins {
     id 'io.franzbecker.gradle-lombok' version '2.1'
     id "net.ltgt.errorprone" version "0.7.1"
     id 'checkstyle'
-    id 'net.saliman.cobertura' version '2.6.0'
+    id 'net.saliman.cobertura' version '2.6.1'
     id 'com.github.kt3k.coveralls' version '2.8.2'
     id 'biz.aQute.bnd.builder' version '4.2.0'
 }
@@ -47,11 +47,11 @@ dependencies {
     errorprone group: 'com.google.errorprone', name: 'error_prone_core', version: '2.3.3'
     errorproneJavac group: 'com.google.errorprone', name: 'javac', version:'9+181-r4173-1'
     testCompile group: 'com.google.guava', name: 'guava', version:'27.1-jre'
-    testCompile group: 'org.mockito', name: 'mockito-core', version:'2.25.1'
+    testCompile group: 'org.mockito', name: 'mockito-core', version:'2.26.0'
     testRuntime group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:3.14.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.1'
+    testImplementation group: 'com.squareup.okhttp3', name: 'mockwebserver', version: '3.14.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.1'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.1'
 }
 
 jar {
@@ -119,7 +119,7 @@ test {
 }
 
 checkstyle {
-    toolVersion = '8.18'
+    toolVersion = '8.19'
 }
 
 cobertura {
