--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
     id 'java'
     id 'maven'
     id 'io.franzbecker.gradle-lombok' version '2.1'
+    id 'com.github.sherter.google-java-format' version '0.8'
     id "net.ltgt.errorprone" version "0.7.1"
     id 'checkstyle'
     id 'net.saliman.cobertura' version '2.6.1'
