--- a/deploy.gradle
+++ b/deploy.gradle
@@ -13,6 +13,7 @@ apply plugin: "io.codearte.nexus-staging"
 nexusStaging {
     packageGroup = GROUP
     numberOfRetries = 40
+    delayBetweenRetriesInMillis = 4000
 }
 
 def isReleaseBuild() {
