--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=com.stripe
-VERSION_NAME=20.75.0
+VERSION_NAME=20.75.0-SNAPSHOT
 
-POM_URL=https://github.com/stripe/stripe-java
+POM_URL=https://github.com/stripe/stripe-java/tree/search-beta
 POM_SCM_URL=git@github.com:stripe/stripe-java.git
 POM_SCM_CONNECTION=scm:git:git@github.com:stripe/stripe-java.git
 POM_SCM_DEV_CONNECTION=scm:git:git@github.com:stripe/stripe-java.git
@@ -13,8 +13,8 @@ POM_DEVELOPER_NAME=Stripe
 POM_DEVELOPER_EMAIL=support+java@stripe.com
 
 POM_DESCRIPTION=Stripe Java Bindings
-POM_NAME=stripe-java
-POM_ARTIFACT_ID=stripe-java
+POM_NAME=stripe-java-search-beta
+POM_ARTIFACT_ID=stripe-java-search-beta
 POM_PACKAGING=jar
 POM_ORGANIZATION_URL=https://stripe.com
 
