--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,13 @@ VENDOR_NAME=Stripe, Inc. (https://stripe.com)
 # Workaround to prevent Java 12 to try and use TLSv1.3 when uploading coverage
 # reports to coveralls.io.
 systemProp.jdk.tls.client.protocols="TLSv1,TLSv1.1,TLSv1.2"
+
+# The following is necessary for google-java-format to work with Java 16+
+# Cf. https://github.com/google/google-java-format#jdk-16.
+# Note that these arguments do NOT work with Java 1.8, so this needs to be
+# commented out in that case.
+org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+ --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+ --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+ --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+ --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
